Update Posts “2019-02-03-test”

--- a/content/posts/2019-02-03-test.md
+++ b/content/posts/2019-02-03-test.md
@@ -1,12 +1,124 @@
 ---
 template: post
-title: test
-slug: /posts/test
+title: TestContainers使ってみないか？
+slug: /posts/test-containers-1
 draft: true
 date: 2019-02-02T15:47:47.575Z
-description: test
-category: test
+description: >-
+  みなさんは、DBアクセスのテストはどう書いていますか？DBをモックにしていますか？実際にDBを用意してテストしていますか？ 
+  私は、だいたいH2を用いてテストを書いています。H2を使っているとDDL問題に直面してしまいます。本番ではMySQLやPostgresを使っていると思うので、テストの為にDDLを用意しないといけません。 
+  わざわざ用意するのめんどくさいとか、これって本当にプロダクトコードのテストになっているのか？とかの疑問を持っていました。  
+
+  そこで、知り合ったのが今回紹介するTestContainersです。
+
+  TestContainersは、JUnitのテストをサポートするJavaのライブラリで、Dockerコンテナ上でDBやSelenium web
+  browserなどを起動することができます。
+category: Test
 tags:
-  - test
+  - TestContainers
 ---
-s
+みなさんは、DBアクセスのテストはどう書いていますか？DBをモックにしていますか？実際にDBを用意してテストしていますか？  
+私は、だいたいH2を用いてテストを書いています。H2を使っているとDDL問題に直面してしまいます。本番ではMySQLやPostgresを使っていると思うので、テストの為にDDLを用意しないといけません。  
+わざわざ用意するのめんどくさいとか、これって本当にプロダクトコードのテストになっているのか？とかの疑問を持っていました。  
+
+そこで、知り合ったのが今回紹介する[TestContainers](https://www.testcontainers.org/)です。
+TestContainersは、JUnitのテストをサポートするJavaのライブラリで、Dockerコンテナ上でDBやSelenium web browserなどを起動することができます。
+
+今回紹介しているサンプルで使用している技術は次の通りです。
+
+```
+Java 11
+Maven
+Spring Boot 2.1.2.RELEASE
+Spring Data JPA
+Mysql
+JUnit 5
+TestContainers 1.10.6
+```
+
+# TestContainersをとりあえず動かそう
+pom.xmlにまず依存関係を追加します。
+
+```
+<dependency>
+    <groupId>org.testcontainers</groupId>
+    <artifactId>testcontainers</artifactId>
+    <version>1.10.6</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>org.testcontainers</groupId>
+    <artifactId>mysql</artifactId>
+    <version>1.10.6</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>org.testcontainers</groupId>
+    <artifactId>junit-jupiter</artifactId>
+    <version>1.10.6</version>
+    <scope>test</scope>
+</dependency>
+```
+
+HelloTest.java
+```
+@Testcontainers
+class BrandRepositoryTest {
+
+    @Container
+    private static final MySQLContainer MY_SQL_CONTAINER = new MySQLContainer();
+
+    @Test
+    void test() {
+        assertTrue(MY_SQL_CONTAINER.isRunning());
+    }
+}
+```
+
+これを実行すると、次のログが出てDocker imageがpullされた後にテストが実行されているのが確認できます。
+```
+...
+00:43:22.656 [main] INFO org.testcontainers.DockerClientFactory - Connected to docker: 
+  Server Version: 18.09.1
+  API Version: 1.39
+  Operating System: Docker for Mac
+  Total Memory: 1999 MB
+...
+00:43:35.506 [main] INFO org.testcontainers.DockerClientFactory - Ryuk started - will monitor and terminate Testcontainers containers on JVM exit
+        ℹ︎ Checking the system...
+        ✔ Docker version should be at least 1.6.0
+00:43:35.513 [main] DEBUG com.github.dockerjava.core.command.AbstrDockerCmd - Cmd: 3ff9169b21b876bfc317476f8750851c18881855d46b1ed8a3656354a6f6487a,<null>,true,<null>,<null>,<null>,<null>,{df,-P},com.github.dockerjava.core.exec.ExecCreateCmdExec@a8e6492
+00:43:35.610 [tc-okhttp-stream-812143047] DEBUG com.github.dockerjava.core.command.ExecStartResultCallback - STDOUT: Filesystem           1024-blocks    Used Available Capacity Mounted on
+overlay               65792556   2810704  59610076   5% /
+tmpfs                    65536         0     65536   0% /dev
+tmpfs                  1023516         0   1023516   0% /sys/fs/cgroup
+/dev/sda1             65792556   2810704  59610076   5% /etc/resolv.conf
+/dev/sda1             65792556   2810704  59610076   5% /etc/hostname
+/dev/sda1             65792556   2810704  59610076   5% /etc/hosts
+shm                      65536         0     65536   0% /dev/shm
+tmpfs                   204704       568    204136   0% /run/docker.sock
+tmpfs                  1023516         0   1023516   0% /proc/acpi
+tmpfs                    65536         0     65536   0% /proc/kcore
+tmpfs                    65536         0     65536   0% /proc/keys
+tmpfs                    65536         0     65536   0% /proc/timer_list
+tmpfs                    65536         0     65536   0% /proc/sched_debug
+tmpfs                  1023516         0   1023516   0% /sys/firmware
+        ✔ Docker environment should have more than 2GB free disk space
+...
+00:46:59.144 [main] DEBUG 🐳 [mysql:5.7.22] - Starting container: mysql:5.7.22
+00:46:59.144 [main] DEBUG 🐳 [mysql:5.7.22] - Trying to start container: mysql:5.7.22
+00:46:59.145 [main] DEBUG 🐳 [mysql:5.7.22] - Trying to start container: mysql:5.7.22 (attempt 1/3)
+00:46:59.145 [main] DEBUG 🐳 [mysql:5.7.22] - Starting container: mysql:5.7.22
+00:46:59.145 [main] INFO 🐳 [mysql:5.7.22] - Creating container for image: mysql:5.7.22
+...
+00:47:13.432 [ducttape-1] INFO 🐳 [mysql:5.7.22] - Obtained a connection to container (jdbc:mysql://localhost:32769/test)
+00:47:13.434 [main] INFO 🐳 [mysql:5.7.22] - Container mysql:5.7.22 started
+00:47:13.467 [main] DEBUG com.github.dockerjava.core.command.AbstrDockerCmd - Cmd: 7b65dc2dfe7e4bd414d9bf228e5b5a004d1045ed05d1cf01b203fba38a5a7c31,false,com.github.dockerjava.core.exec.InspectContainerCmdExec@77602954
+00:47:13.468 [main] DEBUG com.github.dockerjava.core.exec.InspectContainerCmdExec - GET: OkHttpWebTarget(okHttpClient=org.testcontainers.shaded.okhttp3.OkHttpClient@6941827a, baseUrl=http://docker.socket/, path=[/containers/7b65dc2dfe7e4bd414d9bf228e5b5a004d1045ed05d1cf01b203fba38a5a7c31/json], queryParams={})
+00:47:13.479 [main] DEBUG com.github.dockerjava.core.command.AbstrDockerCmd - Cmd: 7b65dc2dfe7e4bd414d9bf228e5b5a004d1045ed05d1cf01b203fba38a5a7c31,<null>,com.github.dockerjava.core.exec.KillContainerCmdExec@73c60324
+00:47:14.088 [main] DEBUG com.github.dockerjava.core.command.AbstrDockerCmd - Cmd: 7b65dc2dfe7e4bd414d9bf228e5b5a004d1045ed05d1cf01b203fba38a5a7c31,false,com.github.dockerjava.core.exec.InspectContainerCmdExec@71ae31b0
+00:47:14.088 [main] DEBUG com.github.dockerjava.core.exec.InspectContainerCmdExec - GET: OkHttpWebTarget(okHttpClient=org.testcontainers.shaded.okhttp3.OkHttpClient@6941827a, baseUrl=http://docker.socket/, path=[/containers/7b65dc2dfe7e4bd414d9bf228e5b5a004d1045ed05d1cf01b203fba38a5a7c31/json], queryParams={})
+00:47:14.099 [main] DEBUG com.github.dockerjava.core.command.AbstrDockerCmd - Cmd: 7b65dc2dfe7e4bd414d9bf228e5b5a004d1045ed05d1cf01b203fba38a5a7c31,true,true,com.github.dockerjava.core.exec.RemoveContainerCmdExec@2c7d121c
+00:47:14.151 [main] DEBUG org.testcontainers.utility.ResourceReaper - Removed container and associated volume(s): mysql:5.7.22Class transformation time: 0.043640464s for 3142 classes or 1.3889390197326542E-5s per class
+```
+
