Update Posts “2019-02-03-test”

--- a/content/posts/2019-02-03-test.md
+++ b/content/posts/2019-02-03-test.md
@@ -1,7 +1,7 @@
 ---
 template: post
 title: TestContainers使ってみないか？
-slug: /posts/test-containers-1
+slug: /posts/test-containers
 draft: true
 date: 2019-02-02T15:47:47.575Z
 description: >-
@@ -63,7 +63,7 @@ pom.xmlにまず依存関係を追加します。
 HelloTest.java
 ```
 @Testcontainers
-class BrandRepositoryTest {
+class TestContainersTest {
 
     @Container
     private static final MySQLContainer MY_SQL_CONTAINER = new MySQLContainer();
@@ -122,3 +122,58 @@ tmpfs                  1023516         0   1023516   0% /sys/firmware
 00:47:14.151 [main] DEBUG org.testcontainers.utility.ResourceReaper - Removed container and associated volume(s): mysql:5.7.22Class transformation time: 0.043640464s for 3142 classes or 1.3889390197326542E-5s per class
 ```
 
+[ここ](https://www.testcontainers.org/features/configuration/)を見てもらえばわかるのですが、テスト実行前にコンテナが正しく起動しているかチェックします。しかし、チェックするのでテスト終了に時間がかかってしまいます。
+testcontainers.propertiesを置いて、　`checks.disable=false` を設定するとこのテスト実行前のチェックが行われなくなります。
+
+# Repositoryのテスト書いてみよう
+テスト対象のレポジトリクラス（BrandRepository.java）
+
+```
+@Repository
+public interface BrandRepository extends JpaRepository<Brand, Integer> {
+    List<Brand> findAllByGender(Brand.Gender gender);
+}
+```
+
+テスト用の設定ファイル（application.properties）
+```
+spring.datasource.url=jdbc:tc:mysql:5.7.22://hostname:port/test?TC_MY_CNF=db/mysql_conf_override
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+spring.datasource.username=test
+spring.datasource.password=
+spring.datasource.sql-script-encoding=utf-8
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+```
+
+MySQLの文字コードをUTF-8に変更したいので、`spring.datasource.url`でTC_MY_CNFパラメータで`somepath/mysql_conf_override`を設定します。`somepath/mysql_conf_override`の下にある*.cnfファイルを読み込んでくれます。  
+今回は、db/mysql_conf_override/custom.cnfに`character-set-server = utf8`だけを書きました。
+
+テストクラス（BrandRepositorTest.java）
+```
+@Testcontainers
+@DataJpaTest(excludeAutoConfiguration = AutoConfigureTestDatabase.class)
+@AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
+class BrandRepositoryTest {
+
+    @Autowired
+    private BrandRepository brandRepository;
+
+    @Test
+    @Sql(scripts = "classpath:/db/migration/brand/initial_data.sql")
+    void findByGender() {
+		    Assertions.assertThat(brandRepository.findAllByGender(Brand.Gender.MAN))
+                .extracting(Brand::getName, Brand::getDesigner, Brand::getGender)
+                .containsExactly(Tuple.tuple("ETHOSENS", "橋本 唯", Brand.Gender.MAN));
+    }
+}
+```
+
+`@DataJpaTest` は、デフォルトでH2を使うので、その設定がされないようにします。 これで起動すると、application.propertiesの設定が使われて、Docker上に起動したMySQLが使われます。
+
+
+TestContainersを使うことで本番と同じDBを簡単に用意できます。ドキュメントのボリュームは少ないので１時間半もあれば全部読み切ることができます。  
+ぜひ試してみてください。
+
+今回紹介したソースコードは、[GitHub](https://github.com/b1a9id/test-containers-sandbox)に置いています。
