Update Posts “2019-02-03-test”

--- a/content/posts/2019-02-03-test.md
+++ b/content/posts/2019-02-03-test.md
@@ -17,8 +17,8 @@ category: Test
 tags:
   - TestContainers
 ---
-みなさんは、DBアクセスのテストはどう書いていますか？DBをモックにしていますか？実際にDBを用意してテストしていますか？  
-私は、だいたいH2を用いてテストを書いています。H2を使っているとDDL問題に直面してしまいます。本番ではMySQLやPostgresを使っていると思うので、テストの為にDDLを用意しないといけません。  
+みなさんは、DBアクセスのテストはどう書いていますか？DBをモックにしていますか？実際にDBを用意してテストしていますか？\
+私は、だいたいH2を用いてテストを書いています。H2を使っているとDDL問題に直面してしまいます。本番ではMySQLやPostgresを使っていると思うので、テストの為にDDLを用意しないといけません。\
 わざわざ用意するのめんどくさいとか、これって本当にプロダクトコードのテストになっているのか？とかの疑問を持っていました。  
 
 そこで、知り合ったのが今回紹介する[TestContainers](https://www.testcontainers.org/)です。
@@ -37,6 +37,7 @@ TestContainers 1.10.6
 ```
 
 # TestContainersをとりあえず動かそう
+
 pom.xmlにまず依存関係を追加します。
 
 ```
@@ -61,9 +62,10 @@ pom.xmlにまず依存関係を追加します。
 ```
 
 HelloTest.java
+
 ```
 @Testcontainers
-class TestContainersTest {
+class HelloTest {
 
     @Container
     private static final MySQLContainer MY_SQL_CONTAINER = new MySQLContainer();
@@ -76,6 +78,7 @@ class TestContainersTest {
 ```
 
 これを実行すると、次のログが出てDocker imageがpullされた後にテストが実行されているのが確認できます。
+
 ```
 ...
 00:43:22.656 [main] INFO org.testcontainers.DockerClientFactory - Connected to docker: 
@@ -123,9 +126,10 @@ tmpfs                  1023516         0   1023516   0% /sys/firmware
 ```
 
 [ここ](https://www.testcontainers.org/features/configuration/)を見てもらえばわかるのですが、テスト実行前にコンテナが正しく起動しているかチェックします。しかし、チェックするのでテスト終了に時間がかかってしまいます。
-testcontainers.propertiesを置いて、　`checks.disable=false` を設定するとこのテスト実行前のチェックが行われなくなります。
+testcontainers.propertiesを置いて、　`checks.disable=true` を設定するとこのテスト実行前のチェックが行われなくなります。
 
 # Repositoryのテスト書いてみよう
+
 テスト対象のレポジトリクラス（BrandRepository.java）
 
 ```
@@ -136,6 +140,7 @@ public interface BrandRepository extends JpaRepository<Brand, Integer> {
 ```
 
 テスト用の設定ファイル（application.properties）
+
 ```
 spring.datasource.url=jdbc:tc:mysql:5.7.22://hostname:port/test?TC_MY_CNF=db/mysql_conf_override
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
@@ -147,10 +152,11 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 ```
 
-MySQLの文字コードをUTF-8に変更したいので、`spring.datasource.url`でTC_MY_CNFパラメータで`somepath/mysql_conf_override`を設定します。`somepath/mysql_conf_override`の下にある*.cnfファイルを読み込んでくれます。  
+MySQLの文字コードをUTF-8に変更したいので、`spring.datasource.url`でTC_MY_CNFパラメータで`somepath/mysql_conf_override`を設定します。`somepath/mysql_conf_override`の下にある*.cnfファイルを読み込んでくれます。\
 今回は、db/mysql_conf_override/custom.cnfに`character-set-server = utf8`だけを書きました。
 
 テストクラス（BrandRepositorTest.java）
+
 ```
 @Testcontainers
 @DataJpaTest(excludeAutoConfiguration = AutoConfigureTestDatabase.class)
@@ -172,8 +178,7 @@ class BrandRepositoryTest {
 
 `@DataJpaTest` は、デフォルトでH2を使うので、その設定がされないようにします。 これで起動すると、application.propertiesの設定が使われて、Docker上に起動したMySQLが使われます。
 
-
-TestContainersを使うことで本番と同じDBを簡単に用意できます。ドキュメントのボリュームは少ないので１時間半もあれば全部読み切ることができます。  
+TestContainersを使うことで本番と同じDBを簡単に用意できます。ドキュメントのボリュームは少ないので１時間半もあれば全部読み切ることができます。\
 ぜひ試してみてください。
 
 今回紹介したソースコードは、[GitHub](https://github.com/b1a9id/test-containers-sandbox)に置いています。
