Update Posts “2019-02-03-test”

--- a/content/posts/2019-02-03-test.md
+++ b/content/posts/2019-02-03-test.md
@@ -2,7 +2,7 @@
 template: post
 title: TestContainers使ってみないか？
 slug: /posts/test-containers
-draft: true
+draft: false
 date: 2019-02-02T15:47:47.575Z
 description: >-
   みなさんは、DBアクセスのテストはどう書いていますか？DBをモックにしていますか？実際にDBを用意してテストしていますか？ 
@@ -178,7 +178,7 @@ class BrandRepositoryTest {
 
 `@DataJpaTest` は、デフォルトでH2を使うので、その設定がされないようにします。 これで起動すると、application.propertiesの設定が使われて、Docker上に起動したMySQLが使われます。
 
-TestContainersを使うことで本番と同じDBを簡単に用意できます。ドキュメントのボリュームは少ないので１時間半もあれば全部読み切ることができます。\
+TestContainersを使うことで本番と同じDBを簡単に用意できます。ドキュメントのボリュームは少ないので1時間半もあれば全部読み切ることができます。\
 ぜひ試してみてください。
 
 今回紹介したソースコードは、[GitHub](https://github.com/b1a9id/test-containers-sandbox)に置いています。
