Update Posts “2019-02-03-test”

--- a/content/posts/2019-02-03-test.md
+++ b/content/posts/2019-02-03-test.md
@@ -152,8 +152,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 ```
 
-MySQLの文字コードをUTF-8に変更したいので、`spring.datasource.url`でTC_MY_CNFパラメータで`somepath/mysql_conf_override`を設定します。`somepath/mysql_conf_override`の下にある*.cnfファイルを読み込んでくれます。\
-今回は、db/mysql_conf_override/custom.cnfに`character-set-server = utf8`だけを書きました。
+MySQLの文字コードをUTF-8に変更したいので、`spring.datasource.url`でTC\_MY\_CNFパラメータで`somepath/mysql_conf_override`を設定します。`somepath/mysql_conf_override`の下にある*.cnfファイルを読み込んでくれます。\
+今回は、db/mysql\_conf\_override/custom.cnfに`character-set-server = utf8`だけを書きました。
 
 テストクラス（BrandRepositorTest.java）
 
