Update Posts “2019-03-10-assertj-3-12-0リリースされたので新機能試してみた”

--- a/content/posts/2019-03-10-assertj-3-12-0リリースされたので新機能試してみた.md
+++ b/content/posts/2019-03-10-assertj-3-12-0リリースされたので新機能試してみた.md
@@ -9,7 +9,7 @@ description: >-
   3.12.0が2019/2/14にリリースされました。これに伴って[ユーザガイド](https://assertj.github.io/doc/)がリニューアルされました。
 
   新機能いくつか試してみました。
-category: TEST
+category: Test
 tags:
   - AssertJ
 ---
