Update Posts “2019-05-03-javaパフォーマンス本を読んで”

--- a/content/posts/2019-05-03-javaパフォーマンス本を読んで.md
+++ b/content/posts/2019-05-03-javaパフォーマンス本を読んで.md
@@ -9,7 +9,7 @@ category: 読書
 tags:
   - Java
 ---
-# 第2章
+# 実アプリケーションでテストする
 パフォーマンステストに利用できるコードは、マイクロベンチマーク、マクロベンチマーク、メゾベンチマークの３種類にカテゴライズできる。
 
 ## マイクロベンチマーク
@@ -25,3 +25,8 @@ tags:
 
 なお、ベンチマークを取る際は、ウォームアップを行って置かないとコード本体だけでなくコンパイルのパフォーマンスも測定してしまうので、気をつける必要があります。   
 マイクロベンチマークの作成は容易ではなく、役に立つケースは限られます。落とし穴について理解して、適切なマイクロベンチマークの作成メリットがあるのか（あるいは、よりマクロなレベルのテストに注力する方がよいのか）どうかを理解しましょう。
+
+# スループット、バッチ、レスポンスタイムを理解する
+## バッチ（一括）処理の測定
+パフォーマンス測定するための最も簡単な方法は、ある作業にどの程度の時間がかかっているかを調べるというものです。  
+Javaは、JIT(just-in-time)コンパイルという厄介者がいて、コードが完全に最適化され十分なパフォーマンスを発揮するためには数分またはそれ以上の時間が必要です。このため、Javaのパフォーマンスに関する調査ではウォームアップの時間がとても重視されています。
