Update Posts “2019-05-03-javaパフォーマンス本を読んで”

--- a/content/posts/2019-05-03-javaパフォーマンス本を読んで.md
+++ b/content/posts/2019-05-03-javaパフォーマンス本を読んで.md
@@ -30,3 +30,9 @@ tags:
 ## バッチ（一括）処理の測定
 パフォーマンス測定するための最も簡単な方法は、ある作業にどの程度の時間がかかっているかを調べるというものです。  
 Javaは、JIT(just-in-time)コンパイルという厄介者がいて、コードが完全に最適化され十分なパフォーマンスを発揮するためには数分またはそれ以上の時間が必要です。このため、Javaのパフォーマンスに関する調査ではウォームアップの時間がとても重視されています。
+
+## スループットの計測
+スループットとは、ある一定の時間内にどの程度の寮の処理を行えるかということを表します。クライアント-サーバー型のテストでスループットを計測する際には、クライアント側にシンクタイム（think time。何も処理を行わずに待つ時間）があってはなりません。  
+通常は、一定時間でのリクエストの総数ではなく１秒間あたりのリクエストの数がスループットとして扱われます。この値は、TPS(transactions per second)、RPS(requests per second)、OPS(operations per second)と呼ばれます。  
+スループットを計測するテストでは、レスポンスタイムを測る場合よりも少数のクライアントを使うようにして負荷を下げるのが一般的です。　　
+固定的な一連の処理を測定するというわけではないため、スループットの測定ではほぼ必ず十分なウォームアップの時間が用意されます。
