Update Posts “2019-05-05-javaパフォーマンス本を読んで-2”

--- a/content/posts/2019-05-05-javaパフォーマンス本を読んで-2.md
+++ b/content/posts/2019-05-05-javaパフォーマンス本を読んで-2.md
@@ -13,4 +13,10 @@ tags:
 一般的には、オブジェクトを生成する回数を減らし、必要なくなったらすぐに廃棄すべきというルールがある。一方、同じ種類のオブジェクトをなんども生成するのは全体としてのパフォーマンスの悪化に繋がります。このようなオブジェクトを破棄せずに再利用するようにすれば、パフォーマンスは大きく向上します。  
 
 ## ヒープヒストグラム  
-どの型のオブジェクトが多くのメモリを消費しているかという点について、分析が必要です。このための最も簡単な方法が、ヒープヒストグラムを利用するというものです。ヒープヒストグラムを使えば、アプリケーション内で使われているオブジェクトの数を手早く確認できます。
+どの型のオブジェクトが多くのメモリを消費しているかという点について、分析が必要です。このための最も簡単な方法が、ヒープヒストグラムを利用するというものです。ヒープヒストグラムを使えば、アプリケーション内で使われているオブジェクトの数を手早く確認できます。  
+ヒープヒストグラムのデータはとても小さいので、自動化されたテストの中で毎回出力されるようにするとよいでしょう。  
+## ヒープダンプ
+ヒープヒストグラムよりも詳細な分析が必要な場合には、ヒープダンプが必要になります。  
+ヒープの分析では、まず保持メモリ量（retained memory）について調べるのが一般的です。保持メモリ量とは、該当するオブジェクトがガーベジコレクションの対象になった場合に解放されるメモリ量を表します。  
+ヒープの中で保持メモリ量の多いオブジェクトはドミネータ（dominator）と呼ばれます。  
+一般的な指針としては、コレクションのエントリではなくコレクション自体のオブジェクトから探索を初めて、最大のコレクションを探すようにしましょう。
