Update Posts “2019-05-05-javaパフォーマンス本を読んで-2”

--- a/content/posts/2019-05-05-javaパフォーマンス本を読んで-2.md
+++ b/content/posts/2019-05-05-javaパフォーマンス本を読んで-2.md
@@ -25,6 +25,29 @@ tags:
 ## OutOfMemoryError
 OutOfMemoryErrorは次のような状況で発生します。
 - JVMから利用できるネイティブメモリが少ない場合  
+
 - permanent領域（Java7まで）やメタスペース（Java8）がいっぱいになった場合  
+
 - ヒープ自体がいっぱいになった場合（使用中のオブジェクトが多すぎ、ヒープとして設定された量を上回っています）  
+ヒープ自体がいっぱいの場合、このようなエラーメッセージが表示されます。  
+`Exception in thread "main" java.lang.OutOfMemoryError: Java heap space`  
+このエラーが発生するのは、主にヒープメモリの不足が原因です。単に、使用中のオブジェクトが多すぎてヒープに収まらなくなったか、メモリリークが発生している可能性があるかのどちらかが考えられます。  
+どちらの場合でも、どのオブジェクトがメモリを最も多く消費しているかを知るにはヒープダンプの分析が必要です。 
+
+```
+[ヒープダンプの自動取得] 
+OutOfMemoryErrorの発生は予測ができないため、いつヒープダンプを取得するべきか判断するのは困難です。そこで、JVMには次のようなフラグが用意されています。  
+
+-XX:+HeapDumpOnOutOfMemoryError  
+  OutOfMemoryErrorの発生時にヒープダンプを生成
+-XX:HeapDumpPath=パス
+  ヒープダンプの出力先を指定
+-XX:+HeapDumpAfterFullGC  
+  フルガベージコレクションの後にヒープダンプを生成  
+-XX:+HeapDumpBeforeFullGC  
+  フルガベージコレクションの前にヒープダンプを生成  
+```
+アプリケーションはオブジェクトを追加するだけで解放はしないため、コレクションは、メモリリークを最も発生しやすいです。
+
+
 - ガベージコレクションに時間がかかりすぎている場合 
