Update Posts “2019-05-15-javaパフォーマンス本を読んで-3”

--- a/content/posts/2019-05-15-javaパフォーマンス本を読んで-3.md
+++ b/content/posts/2019-05-15-javaパフォーマンス本を読んで-3.md
@@ -34,4 +34,5 @@ Java言語の最も魅力的な特徴の1つに、開発者がオブジェクト
 クライアントマシンのマシンでは、これがデフォルトのガベージコレクターになります。ヒープの処理を行うスレッドは1つです。マイナーガベージコレクションとフルガベージコレクションの両方で、アプリケーションスレッドをすべて停止した上で処理が行われます。
 
 ## スループット型ガベージコレクター
-サーバークラスのマシンでは、これがデフォルトのガベージコレクターになります。
+サーバークラスのマシンでは、これがデフォルトのガベージコレクターになります。young領域の処理に複数のスレッドを利用します。したがって、マイナーガベージコレクションはシリアル型よりも大幅に高速です。また、old領域の処理に複数のスレッドを利用することもでき、Java 7u4以降ではこれがデフォルトの設定になっています。  
+ここでも、マイナーガベージコレクションとフルガベージコレクションの双方でアプリケーションスレッドはすべて停止します。
