Update Posts “2019-05-15-javaパフォーマンス本を読んで-3”

--- a/content/posts/2019-05-15-javaパフォーマンス本を読んで-3.md
+++ b/content/posts/2019-05-15-javaパフォーマンス本を読んで-3.md
@@ -36,3 +36,10 @@ Java言語の最も魅力的な特徴の1つに、開発者がオブジェクト
 ## スループット型ガベージコレクター
 サーバークラスのマシンでは、これがデフォルトのガベージコレクターになります。young領域の処理に複数のスレッドを利用します。したがって、マイナーガベージコレクションはシリアル型よりも大幅に高速です。また、old領域の処理に複数のスレッドを利用することもでき、Java 7u4以降ではこれがデフォルトの設定になっています。  
 ここでも、マイナーガベージコレクションとフルガベージコレクションの双方でアプリケーションスレッドはすべて停止します。
+
+## CMSガベージコレクター
+スループット型やシリアル型のガベージコレクターで行われているような、フルガベージコレクションに伴う長い停止を回避するためにCMS(Concurrent Mark Sweep)ガベージコレクターは設計されました。フルガベージコレクションの際にアプリケーションスレッドを止めずにすむよう、CMSガベージコレクターでは1つまたは複数のスレッドを使ってバックグラウンドでold領域を探索し、使われていないオブジェクトを破棄します。バックグラウンドのスレッドによるold領域のスキャンが行われます。　　
+アプリケーションスレッドと並行してバックグラウンドでヒープを検索するので、CPU使用率は増加します。
+
+## G1ガベージコレクター
+大きなヒープ（およそい4GB以上）を最大限の停止時間で処理することを目標としています。
