Update Posts “2019-05-15-javaパフォーマンス本を読んで-3”

--- a/content/posts/2019-05-15-javaパフォーマンス本を読んで-3.md
+++ b/content/posts/2019-05-15-javaパフォーマンス本を読んで-3.md
@@ -42,4 +42,4 @@ Java言語の最も魅力的な特徴の1つに、開発者がオブジェクト
 アプリケーションスレッドと並行してバックグラウンドでヒープを検索するので、CPU使用率は増加します。
 
 ## G1ガベージコレクター
-大きなヒープ（およそい4GB以上）を最大限の停止時間で処理することを目標としています。
+大きなヒープ（およそい4GB以上）を最大限の停止時間で処理することを目標としています。アプリケーションスレッドの実行中にold領域の処理を並行して行えます。CMSを利用する場合よりも、フルガベージコレクションが必要になる可能性を低くできます。
