Update Posts “2019-05-15-javaパフォーマンス本を読んで-3”

--- a/content/posts/2019-05-15-javaパフォーマンス本を読んで-3.md
+++ b/content/posts/2019-05-15-javaパフォーマンス本を読んで-3.md
@@ -2,9 +2,11 @@
 template: post
 title: 'Javaパフォーマンス本を読んで #3'
 slug: /posts/read-java-performance-3/
-draft: true
+draft: false
 date: 2019-05-15T03:15:20.405Z
-description: Javaパフォーマンス本を読んで
+description: |-
+  Javaパフォーマンス本を読んで #3
+  ガベージコレクションの基礎
 category: BOOK
 tags:
   - Java
