Update Posts “2019-05-03-javaパフォーマンス本を読んで”

--- a/content/posts/2019-05-03-javaパフォーマンス本を読んで.md
+++ b/content/posts/2019-05-03-javaパフォーマンス本を読んで.md
@@ -4,7 +4,7 @@ title: 'Javaパフォーマンス本を読んで #1'
 slug: /posts/read-java-performance-1/
 draft: false
 date: 2019-05-03T06:16:18.761Z
-description: Javaパフォーマンス本第2章を読んで
+description: 'Javaパフォーマンス本読んで#1 パフォーマンステストのアプローチ'
 category: BOOK
 tags:
   - Java
