Update Posts “2019-05-05-javaパフォーマンス本を読んで-2”

--- a/content/posts/2019-05-05-javaパフォーマンス本を読んで-2.md
+++ b/content/posts/2019-05-05-javaパフォーマンス本を読んで-2.md
@@ -1,10 +1,10 @@
 ---
 template: post
-title: 'Javaパフォーマンス本を読んで #2'
-slug: /posts/read-java-performance-2/
+title: 'Javaパフォーマンス本を読んで #4'
+slug: /posts/read-java-performance-4/
 draft: true
 date: 2019-05-05T06:03:24.796Z
-description: Javaパフォーマンス本を読んで
+description: 'Javaパフォーマンス本を読んで #4 ヒープのベストプラクティス'
 category: BOOK
 tags:
   - Java
