Update Posts “2019-05-26-javaパフォーマンス本を読んで-2”

--- a/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
+++ b/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
@@ -12,3 +12,6 @@ tags:
 # 第3章 Javaパフォーマンスのツールボックス
 パフォーマンス分析は可視化と表裏一体です。アプリケーションの内部や、その実行環境で起こっていることを知るのがパフォーマンス分析で、可視化にはツールが不可欠です。
 
+## オペレーティングシステム付属のツールと分析
+プログラムの分析の手始めになるツールは、Javaとの直接の関係はまったくなく、OSに付属している、基本的な監視のツールを利用します。  
+パフォーマンステストを行う際には、OSからもCPUとメモリ、ディスクの使用率は最低限収集すべきです。
