--- a/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
+++ b/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
@@ -16,5 +16,11 @@ tags:
 プログラムの分析の手始めになるツールは、Javaとの直接の関係はまったくなく、OSに付属している、基本的な監視のツールを利用します。  
 パフォーマンステストを行う際には、OSからもCPUとメモリ、ディスクの使用率は最低限収集すべきです。ネットワークを利用するプログラムでは、ネットワークの使用率も必要です。
 
-## CPUの使用率
+### CPUの使用率
 CPUの使用率の値はある一定の期間（1秒 or 5秒 or 30秒）の平均値を表しています。CPUの使用率とは、プログラムがどの程度効率的にCPUを使えているかということを表しているので、この値が大きければ大きいほど望ましい状態になります。
+
+### ディスクの使用率
+ディスクの使用率を監視することには、2つの大きな意味があります。1つ目は、アプリケーション自体に関わるものです。2つ目は、システムがスワッピングを行なっているかどうかわかるという点です。
+
+### ネットワークの使用率
+ネットワークを利用するアプリケーションでは、ネットワークのトラフィックも監視しなければなりません。UNIXシステムでの基本的なネットワーク監視ツールとしては、netstatがよく使われます。
