Update Posts “2019-05-26-javaパフォーマンス本を読んで-2”

--- a/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
+++ b/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
@@ -51,4 +51,23 @@ Javaのプロセスのスタックをダンプします。
 - jvisualvm  
 JVMの監視、実行中のアプリケーションに対するプロファイリング、JVMのヒープダンプの分析のためのGUIツールです。
 
-  
+### JVMの基本的な情報
+- 実行時間
+JVMが実行されている時間を取得します。  
+`jcmd [PID] vm.uptime`  
+
+- システムプロパティ  
+`System.getProperties()` を通じて得られるのと同じ情報が出力されます。  
+`jcmd [PID] vm.system_properties`  
+`jinfo -sysprops [PID]`
+
+- JVMのバージョン  
+`jcmd [PID] VM.version
+
+- JVMのコマンドライン引数  
+`jcmd [PID] VM.command_line`
+
+- JVMのチューニングフラグ  
+アプリケーションの中で有効かされているチューニングフラグは以下のようにして取得します。
+`jcmd [PID] VM.flags [-all]
+
