Update Posts “2019-05-26-javaパフォーマンス本を読んで-2”

--- a/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
+++ b/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
@@ -71,3 +71,9 @@ JVMが実行されている時間を取得します。
 アプリケーションの中で有効かされているチューニングフラグは以下のようにして取得します。
 `jcmd [PID] VM.flags [-all]
 
+### スレッドの情報
+jconsoleやjvisualvmを使うと、アプリケーション内で実行されているスレッドの数をリアルタイムに表示できます。スレッドの実行がブロックされているかどうかを知りたい場合には、スレッドスタックを確認するとよいでしょう。これにはjstackを利用します。  
+`jstack [PID]`  
+`jcmd [PID] Thread.print`  
+
+### クラスの情報
