Update Posts “2019-05-26-javaパフォーマンス本を読んで-2”

--- a/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
+++ b/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
@@ -77,3 +77,13 @@ jconsoleやjvisualvmを使うと、アプリケーション内で実行されて
 `jcmd [PID] Thread.print`  
 
 ### クラスの情報
+アプリケーションの中で利用されているクラスの数を調べるには、jconsoleやjstatを使います。jstatではクラスのコンパイルに関する情報を得ることもできます。
+
+### ガベージコレクションの動的な分析
+jconsoleはヒープの使用率をグラフとしてリアルタイムに表示でき、jcmdはガベージコレクションを実行させることができます。
+
+## プロファイリングツール
+パフォーマンスアナリストにとって、プロファイラは最も重要なツールの1つです。  
+プロファイラはソケットなどの通信手段を使って対象のアプリケーションに接続し、アプリケーションのふるまいに関する情報を取得します。したがって、プロファイリング対象のアプリケーションと同じくらいプロファイラ自身についてもチューニングを行わなければなりません。
+
+## 
