Update Posts “2019-05-26-javaパフォーマンス本を読んで-2”

--- a/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
+++ b/content/posts/2019-05-26-javaパフォーマンス本を読んで-2.md
@@ -2,7 +2,7 @@
 template: post
 title: 'Javaパフォーマンス本を読んで #2'
 slug: /posts/read-java-performance-2/
-draft: true
+draft: false
 date: 2019-05-26T02:23:20.933Z
 description: 'Javaパフォーマンス本読んで#2 Javaパフォーマンスのツールボックス'
 category: BOOK
@@ -86,4 +86,6 @@ jconsoleはヒープの使用率をグラフとしてリアルタイムに表示
 パフォーマンスアナリストにとって、プロファイラは最も重要なツールの1つです。  
 プロファイラはソケットなどの通信手段を使って対象のアプリケーションに接続し、アプリケーションのふるまいに関する情報を取得します。したがって、プロファイリング対象のアプリケーションと同じくらいプロファイラ自身についてもチューニングを行わなければなりません。
 
-## 
+## Java Mission Control
+商用版のJava 7(7u40以降)とJava 8には、Java Mission Controlと呼ばれる新しい監視と制御の仕組みが含まれています。利用には商用ライセンスが必要です。  
+Java Mission Controlのプログラム(jmc)を起動すると、マシン上でのJVMのプロセスがウインドウ内に表示されます。
