Update Posts “2019-05-24-spring-boot-1-5-2-xに移行したときメモ”

--- a/content/posts/2019-05-24-spring-boot-1-5-2-xに移行したときメモ.md
+++ b/content/posts/2019-05-24-spring-boot-1-5-2-xに移行したときメモ.md
@@ -21,3 +21,6 @@ tags:
 }
   ```
   [Upgrading your build from Gradle 4.x to 5.0](https://docs.gradle.org/5.0/userguide/upgrading_version_4.html) を参考にやってく
+
+- Gradle 4.7からcompileとかruntimeなどが非推奨になってる
+[参考](https://docs.gradle.org/4.7/userguide/java_plugin.html#sec:java_plugin_and_dependency_management)
