--- a/content/posts/2019-05-24-spring-boot-1-5-2-xに移行したときメモ.md
+++ b/content/posts/2019-05-24-spring-boot-1-5-2-xに移行したときメモ.md
@@ -1,6 +1,6 @@
 ---
 template: post
-title: Spring Boot 1.5 -> 2.xに移行したときメモ
+title: 決済サービスのSpring Bootのバージョンを2系に上げた~テック編~
 slug: /posts/
 draft: true
 date: 2019-05-24T03:10:39.290Z
@@ -10,6 +10,18 @@ tags:
   - Java
   - Gradle
 ---
+Spring Boot2系にあげるにあたって参考にしたページ等載せます。
+
+# Spring Boot 
+## 1.4.x -> 1.5.x
+- [Spring Boot 1.5 Release Notes](https://github.com/spring-projects/spring-boot/wiki/spring-boot-1.5-release-notes)
+
+## 1.5.x -> 2.0.x
+- [Spring Boot 2.0 Release Notes](https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.0-Release-Notes)
+- [Spring Boot 2.0 Migration Guide](https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.0-Migration-Guide)
+
+
+# Gradle
 - Gradleのバージョンを5.xに  
   まず、4系の最新まであげる
   `./gradlew wrapper`
