Update Posts “2021-06-30-spring-非同期処理とリトライ処理”

--- a/content/posts/2021-06-30-spring-非同期処理とリトライ処理.md
+++ b/content/posts/2021-06-30-spring-非同期処理とリトライ処理.md
@@ -1,7 +1,7 @@
 ---
 template: post
 title: Spring 非同期処理とリトライ処理
-slug: /posts/spring-boot-async-retry
+slug: /posts/spring-boot-async-and-retry
 draft: true
 date: 2021-06-30T15:27:25.421Z
 description: 詳細
@@ -11,3 +11,6 @@ tags:
   - SpringAOP
 ---
 お仕事でSpringの非同期処理とリトライ処理に触れることがあったので、まとめておきます。
+
+Spring MVCの非同期処理の細かい話については、[こちら](https://qiita.com/kazuki43zoo/items/ce88dea403c596249e8a)の記事がとても参考になりましたので、こちらを参照してください。
+
