Update Posts “2021-06-30-spring-非同期処理とリトライ処理”

--- a/content/posts/2021-06-30-spring-非同期処理とリトライ処理.md
+++ b/content/posts/2021-06-30-spring-非同期処理とリトライ処理.md
@@ -12,5 +12,29 @@ tags:
 ---
 お仕事でSpringの非同期処理とリトライ処理に触れることがあったので、まとめておきます。
 
-Spring MVCの非同期処理の細かい話については、[こちら](https://qiita.com/kazuki43zoo/items/ce88dea403c596249e8a)の記事がとても参考になりましたので、こちらを参照してください。
+Spring MVCの非同期処理の細かい話については、[こちら](https://qiita.com/kazuki43zoo/items/ce88dea403c596249e8a)を参照してください。
 
+今回の環境
+- Java 11
+- Spring Boot 2.5.2
+
+## @Asyncを使った非同期処理
+@org.springframework.scheduling.annotation.Asyncメソッドに付与することで非同期処理を行うことができます。
+Spring Boot 2.1より前のバージョンだと、taskExecutorというBean名でThreadPoolTaskExecutort.javaをBean登録することが普通でしたが、Spring Boot 2.1からはデフォルトでBean登録されるようになりました。[参考](https://github.com/spring-projects/spring-boot/blob/2.5.x/spring-boot-project/spring-boot-autoconfigure/src/main/java/org/springframework/boot/autoconfigure/task/TaskExecutionAutoConfiguration.java#L75-L81)
+
+### 実装
+**1.@Asyncによる非同期処理を有効にする**
+
+設定用のクラスを準備して@EnableAsyncを付与します。
+`gist:b1a9id/5cd2a5228e4388885833c12382c2c3ad?file=WebMvcConfig.java&highlights=8`　
+
+**2.非同期処理したいさせたいメソッドに@Asyncを付与する。**
+
+非同期処理したいさせたいメソッドに@Asyncを付与してください。AOPを使っているので、DIしてこのメソッドを呼ぶ使い方をしないと非同期処理が行われません。
+
+`gist:b1a9id/86753f33eebdd82069ec18aeec033465?file=AsyncServiceImpl.java&highlights=18`　
+
+### 挙動を見てみる
+スクリプトで連続的にリクエストしてみます。
+
+`gist:b1a9id/7e11c2e79b9987010e14e8bc63543ea9?file=request.sh`　
