--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -18,5 +18,20 @@ description:
     - 実行時のオーバーヘッドや情報の粒度などからperformance_schema.threadsテーブルの方が推奨されている
 
 ## MySQLのパラメータ
-MySQLにはたくさんのパラメータ（設定可能項目）があり、分類ごとにいくつかの特性を持っている。
-
+- MySQLにはたくさんのパラメータ（設定可能項目）があり、分類ごとにいくつかの特性を持っている。
+  - オンラインで変更が可能なパラメータと設定変更にMySQLの再起動が必要なパラメータがある。
+- my.cnfの読み込み順序
+  - /etc/my.cnf
+  - /etc/mysql/my.cnf
+  - SYSCONFDIR/my.cnf
+  - $MYSQL_HOME/my.cnf
+  - --default-extra-file
+  - $HOME/my.cnf
+  - $HOME/.mylogin.cnf
+  - DATADIR/mysqld-auto.cnf
+  - コマンドラインオプションで与えられた引数
+- オンラインで変更したパラメータを永続化するにはSET PERSISTステートメントが使える
+  - SET PERSIST/SET PERSIST_ONLYで変更されたパラメータはDATADIR/mysqld-auto.cnfにJSONの形式で記録される
+    - このファイルは管理者が直接編集することを想定していない。
+    - mysqld-auto.cnfに記録されたパラメータの設定を削除するには、RESET PERSISTステートメントを利用する
+    - 各パラメータがどこで設定されたかはperformance_schema.variables_infoテーブルで確認できる
