--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -35,3 +35,35 @@ description:
     - このファイルは管理者が直接編集することを想定していない。
     - mysqld-auto.cnfに記録されたパラメータの設定を削除するには、RESET PERSISTステートメントを利用する
     - 各パラメータがどこで設定されたかはperformance_schema.variables_infoテーブルで確認できる
+
+## MySQLのバージョン情報
+MySQLのバージョンは、SELECT VERSION(); や SHOW VARIABLES LIKE 'version'; などで調べることができる。
+
+# 運用設計
+## バージョン選定
+MySQL 8.0系列は同一リリース系列内でも非互換性があるため、バージョンの選定は慎重にされなくてはならない。\
+クライアントやライブラリのバージョンはMySQLサーバと同じかそれ以上であることが必須。MySQL 8.0系列ではバージョン番号の信仰に伴って新機能が追加されてしまうため、 その機能やその周辺に新規にバグが内在する可能性がある。
+
+現時点で確実に進められることは次の通り。
+- 導入時点での最新バージョンを選び動作確認をする
+- 導入以後のアップグレードに備えてSQLレベルでの非互換性を検出できるように回帰テストを作成する
+- アップグレードをする際にはクライアントのバージョンを先にあげる
+
+## バックアップ設計
+- バックアップの間隔
+  - バックアップにはフルバックアップと増分バックアップがあり、両方揃って初めて任意の時点のデータを復元できる
+  - フルバックアップの頻度
+    - 目標復旧時間（RTO）に応じてベースとなるフルバックアップの間隔を決める
+  - 増分バックアップの頻度
+    - レプリケーション構成を組んでいる場合、間違いなくマスターではバイナリログが出力されているが、これをマスターのストレージ以外の場所に保管しておくことが必要。
+      - マスターだけにバイナリログが保管されている（増分バックアップを取得しない）場合、MySQLが稼働しているマシンが完全に壊れ、ストレージからMySQLのデータはおろかバイナリログすら取り出せなくなってしまうと最後のフルバックアップの時点までしか復元できない
+  - リストアにかかる時間の見積もり
+    - フルバックアップの頻度を決める上で重要なのが「フルバックアップをリストアするのにかかる時間」と「一定期間のバイナリログを適用するのにかかる時間」。これらをできるだけ正しく見積もることは大切。
+    - フルバックアップのリストア時間はデータの総容量に依存し、バイナリログの適用はバイナリログの量（= データが更新される頻度）に依存する
+  - バックアップの運用計画に関するパラメータ
+    - 増分バックアップの計画に大切なパラメータとしてbinlog_expire_logs_secondsという値がある。
+      - これは、現在のバイナリログがスイッチした時点で過去の古いバイナリログを削除するためのパラメータ。
+    - バイナリログがスイッチするタイミングは、max_binlog_sizeというパラメータで決定される。
+      - 追記されていったバイナリログのサイズがこのパラメータで設定されて値よりも大きくなると、バイナリログのスイッチが発生する。
+    - log_slave_updates
+      - デフォルトはONで、スレーブはマスターからレプリケーションで受け取った更新差分を自身（= スレーブ）のバイナリログに出力する。これによりマスターとスレーブで二重にバイナリログが保管され、バイナリログの喪失への耐性が上がる。
