--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -84,3 +84,24 @@ MySQLが機能を提供しているかどうかを確認する「死活監視」
     - スレーブであれば、SHOW SLAVE STATUSのSeconds_Behind_Master（= 更新がマスターに実行されてからスレーブの反映までかかっている時間）が大きくなっていないか
     - 各テーブルのAUTO_INCREMENT属性カラムが、データ型の最大値近くまで払い出されていないか
     - Uptimeが小さすぎないか
+- リソース監視
+  - 直接的なエラー以外の、レスポンス速度低下の原因究明や性能限界の計測に役立つ
+  - 「問題発生以前」、「問題発生中」、「問題終息後」の３時点のリソースを比較するためにも継続的なデータの蓄積は必須
+- MySQLの各種ログ
+  - エラーログ
+    - MySQLサーバはプロセスに発生した異常をエラーログに出力する
+  - スロークエリログ
+    - mysqldがSQLを処理するのにかかった時間を記録するログ
+    - クエリの処理にかかった時間はMySQLサーバを利用する環境にとって非常に重要
+    - できる限り有効にしておくのがよい
+    - my.cnfにslow_query_logオプションを記載する or サーバ変数のslow_query_logをONに設定
+  - ジェネラルログ
+    - 一般クエリログとも呼ばれ、mysqldが受け取ったすべてのクエリを記録するためのログ
+    - アプリケーションのデバッグ用途に用いるためのログであり、恒常的にONにしておくようなログではない
+  - ログファイルのローテーション
+    - MySQLサーバはそれ単体ではログローテーションの仕組みを持たない
+  - その他のログと名のつくもの
+    - MySQLサーバが内部動作を記録するためのログであり、テキストとして開くことはないが、削除しないようにしないといけない
+      - InnoDB ログ
+      - バイナリログ
+      - リレーログ
