--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -105,3 +105,15 @@ MySQLが機能を提供しているかどうかを確認する「死活監視」
       - InnoDB ログ
       - バイナリログ
       - リレーログ
+
+## 実際の運用作業
+### パラメータチューニング
+すこしくらいパラメータを変更したところでパフォーマンスが劇的によくなることはない。事前に綿密な計算のもと、パラメータを算出するよりも運用中に効果を測定しながら継続的にパラメータの最適値に近づけていくことが大切。
+
+- 事前に計算しておくべきパラメータ
+  - innodb_buffer_pool_sizeは重要なオプション
+    - InnoDBのすべてのテーブルで利用されるバッファプール（メモリ上に配置）のサイズを指定する
+    - SELECTのときにキャッシュとして使われるのみならず、InnoDBのすべての操作を一度バッファプールを経由して処理されるため、あらゆるDMLやDDLの速度に影響を及ぼす。
+    - 物理メモリが小さい（例えば4GB以下）ときは50%程度、十分大きい（例えば12GB以上）ときは80%などと単純な割合ではなく、InnoDBバッファプール以外にどれくらいメモリを残しておくべきかから算出するのがよい
+    - innodb_buffer_pool_sizeはオンラインで変更できる（MySQL 5.6とそれ以前は再起動が必要だった）
+
