--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -124,7 +124,7 @@ MySQLのパフォーマンス問題の多くはクエリ単位に分解して考
 - インデックスの仕組み
   - 最もコストパフォーマンスが高いのは「インデックスを使わせること」
   - INSERT/UPDATE/DELETEといった更新処理はインデックスも同時にメンテナンスしなければならないため、更新の負荷はインデックスがない場合よりも大きくなる
-  - 特定のクエリにい対してベストなインデックスであっても、クエリの形が変わると同じインデックスがベストとは限らない
+  - 特定のクエリに対してベストなインデックスであっても、クエリの形が変わると同じインデックスがベストとは限らない
   - 複数カラムからなるインデックスはカラムの順番で効率が変わることがある、インデックスの大部分を操作しなければならないアクセスパターンは効率がよくない
 - インデックスによるWHERE句のチューニング
   - カードをめくって目視が1番コストの高い動作になるため、可能な限りこれを避けるようにインデックスを追加していく
@@ -132,4 +132,9 @@ MySQLのパフォーマンス問題の多くはクエリ単位に分解して考
     - rowsがカードをめくって目視する見積もりを表しており、filteredがカードをめくってチェックしたうち、何%程度が実際にマッチする行である見積もりを表している
     - ExtraのUsing whereがインデックスだけではWHERE句を解決しきれないので目視のフィルタリングが必要であることを表している
   - 不要なインデックスを作ってしまうことを重要視するよりも、不要になったインデックスを安全に検出して削除することを継続指定実践していいくのがよい
-
+- WHERE句のチューニングによる改善すべきクエリの特定
+  - WHERE句にインデックスが使えずに非効率になっているクエリの特定は容易
+    - 特定にはスロークエリログまたはperformance_schemaが使える
+      - 実行時にフィルタがかけられる前者の方が便利
+      - 後者はWHERE句などの定数をノーマライズしたダイジェストと呼ばれる単位で蓄積していくため、「リソースに余裕がある何の問題もないが、トラフィックがバーストすると問題として顕在化する」ようなクエリを探すのに便利
+      - スロークエリログの Rows_examined / Rows_sent の値が1 に近ければ近いほどWHERE句の効率が良く、大きければ大きいほど非効率
