--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -140,3 +140,8 @@ MySQLのパフォーマンス問題の多くはクエリ単位に分解して考
       - スロークエリログの Rows_examined / Rows_sent の値が1 に近ければ近いほどWHERE句の効率が良く、大きければ大きいほど非効率
 - インデックスによる ORDER BY ... LIMIT のチューニング
   - MySQLのインデックスはWHERE句による絞り込み以外に、ORDER BY句に対する効率化にも利用可能
+- ORDER BY ... LIMIT のための「優先度付きキュー」によるソート
+  - 「優先度付きキュー」はMySQL 5.6とそれ以降で追加された比較的新しいORDER BY がLIMIT句とともに使われている場合の最適化方式
+  - ソートバッファを優先度付きキューとして扱うことでORDER BY ... LIMITを省メモリで効率的に処理する最適化が働く。
+    - この最適が行われたとしても「ソートに必要なカラムの値をすべて読み取らなければならない」という点は変わらない
+    - この最適化はオプティマイザが自動で選択するので、「チューニング」ではなく「そういうもの」と知っていればよい
