--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -145,3 +145,5 @@ MySQLのパフォーマンス問題の多くはクエリ単位に分解して考
   - ソートバッファを優先度付きキューとして扱うことでORDER BY ... LIMITを省メモリで効率的に処理する最適化が働く。
     - この最適が行われたとしても「ソートに必要なカラムの値をすべて読み取らなければならない」という点は変わらない
     - この最適化はオプティマイザが自動で選択するので、「チューニング」ではなく「そういうもの」と知っていればよい
+- ORDER BY ... LIMIT のチューニングによる改善すべきクエリの特定
+  - ORDER BY句をインデックスで解決できているか、いなかを判断するためにもスロークエリログまたはperformance_schemaを使う
