--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -147,3 +147,28 @@ MySQLのパフォーマンス問題の多くはクエリ単位に分解して考
     - この最適化はオプティマイザが自動で選択するので、「チューニング」ではなく「そういうもの」と知っていればよい
 - ORDER BY ... LIMIT のチューニングによる改善すべきクエリの特定
   - ORDER BY句をインデックスで解決できているか、いなかを判断するためにもスロークエリログまたはperformance_schemaを使う
+- クエリの書き換えによるチューニング
+  - アプリケーション側の発行するクエリを変えることによって高速化する
+  - ループ構造による繰り返しクエリ
+    - N+1問題
+      - Nの数が十分に小さいあいだはアプリケーション側でも遅いと感じられることがなく、データの増加にしたがってNが大きくなったときに初めて顕在化する
+      - JOINを使ってSQLレベルで処理できる。アプリケーションとMySQLの通信は1回だけになり、ネットワーク負荷とCPU負荷を下げられる
+  - 大量データフェッチへの対処
+    - 大量データのフェッチによってI/Oを枯渇させる
+    - アプリケーション側でフェッチする範囲を狭めてループで複数回実行することが負荷の軽減につながる
+  - LIMIT句とOFFSET句
+    - ORDER BY句とLIMIT句を併用することで、ソートに優先度付きキューを使った最適化やORDER BY狙いのキーを使った追加ソートを不要とする方法がある。
+    - OFFSET句がカーソル操作をする対象は生成済みの結果セットに対してのみ
+    - 巨大な1つのクエリを分割するときにLIMIT句とOFFSET句を併用した場合、個々のクエリで削減できるのはネットワーク転送量だけ
+    - LIMIT句とORDER BY句の組み合わせは、パフォーマンス上の問題を引き起こしやすく、ORDER BY句の考慮漏れなどで正しい結果セットを得られなくなる可能性もあるため、注意が必要
+  - ALTER TABLE実行時のTIPS
+    - MySQLは以前のバージョンからオンラインALTER TABLEと呼ばれる機能を備えている
+      - オンラインの意味はALTER TABLE中に読み書きが可能という意味
+    - オンラインALTER TABLEがサポートされているかどうかを確認する
+      - LOCK句はALTER TABLE中のDMLに対してロックを指定するための構文で
+      - LOCK=NONEがALTER TABLE中のDMLを制限しない、すなわちオンラインALTER TABLEを表す
+      - LOCK=SHAREDは、ALTER TABLE中には読み取りDMLのみ許可する（= 読み取り専用の）ロックを置くということで、、旧来と同じ読み取り専用のALTER TABLEになる
+    - ALTER TABLEとレプリケーション遅延
+      - マスターで1時間かかったクエリはスレーブでも1時間かかること、マルチスレッドスレープを有効にしてもALTER TABLEは追い越せない
+        - マスターでALTER TABLEに要した時間と同じだけスレーブでへの反映が遅延する
+      - レプリケーションの遅延が許容できない場合、オンラインALTER TABLEであってもアプリケーションを停止してからメンテナンスとしてALTER TABLEを実行する必要がある
