--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -172,3 +172,8 @@ MySQLのパフォーマンス問題の多くはクエリ単位に分解して考
       - マスターで1時間かかったクエリはスレーブでも1時間かかること、マルチスレッドスレープを有効にしてもALTER TABLEは追い越せない
         - マスターでALTER TABLEに要した時間と同じだけスレーブでへの反映が遅延する
       - レプリケーションの遅延が許容できない場合、オンラインALTER TABLEであってもアプリケーションを停止してからメンテナンスとしてALTER TABLEを実行する必要がある
+    - 安全なインデックス削除のための不可視インデックス
+      - インデックスを削除するDROP INDEXオペレーションは比較的高速に実行できるが、ADD INDEXオペレーションはそれなりに重い処理になるため、切り戻しが必要となった場合に時間がかかることがある
+      - このような事態を避けるための「不可視インデックス」
+        - 不可視とは、テーブル定義及びデータ構造上には存在するものの、オプティマイザから決して選択されない（= 見えない）ことを指している
+        - 通常のインデックスと不可視インデックスの切り替えは一瞬で済むため、インデックスが削除されたあとに影響が出ないかを確認でき、万一影響が出たとしても切り戻しも一瞬でできる
